--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 build = "build.rs"
 
 [dependencies]
+libc = "0.2"
 
 [build-dependencies]
 gcc = "0.3"
