--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ libc = "0.2"
 url = "1.1"
 bitflags = "0.7"
 reqwest = "0.2"
+nom = "1.2"
+flavors = {git = "https://github.com/Geal/flavors.git"}
 
 [build-dependencies]
 gcc = "0.3"
