--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ url = "1.1"
 bitflags = "0.7"
 reqwest = "0.2"
 nom = "2.0"
-flavors = {git = "https://github.com/Geal/flavors.git"}
+flavors = {git = "https://github.com/sdroege/flavors.git"}
 
 [build-dependencies]
 gcc = "0.3"
