--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "LGPL-2.1+"
 libc = "0.2"
 url = "1.1"
 bitflags = "0.7"
-reqwest = { git = "https://github.com/sdroege/reqwest.git"}
+reqwest = "0.2"
 
 [build-dependencies]
 gcc = "0.3"
