--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,3 @@
-[package]
-name = "rsplugin"
-version = "0.1.0"
-authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-build = "build.rs"
-repository = "https://github.com/sdroege/rsplugin"
-license = "LGPL-2.1+"
+[workspace]
 
-[dependencies]
-libc = "0.2"
-url = "1.1"
-bitflags = "0.7"
-reqwest = "0.2"
-nom = "2.0"
-flavors = {git = "https://github.com/sdroege/flavors.git"}
-
-[build-dependencies]
-gcc = "0.3"
-pkg-config = "0.3"
-
-[lib]
-name = "rsplugin"
-crate-type = ["cdylib"]
-path = "src/lib.rs"
+members = ["gst-plugin", "gst-plugin-file", "gst-plugin-http", "gst-plugin-flv"]
