--- a/gst-plugin-http/Cargo.toml
+++ b/gst-plugin-http/Cargo.toml
@@ -9,6 +9,7 @@ license = "LGPL-2.1+"
 url = "1.1"
 gst-plugin = { path="../gst-plugin" }
 reqwest = "0.2"
+slog = "1.3"
 
 [lib]
 name = "gstrshttp"
