--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -10,7 +10,8 @@ license = "LGPL-2.1+"
 libc = "0.2"
 url = "1.1"
 bitflags = "0.7"
-slog = "1.3"
+slog = { version = "1.3", features = ["max_level_trace"] }
+lazy_static = "0.2"
 
 [build-dependencies]
 gcc = "0.3"
