--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -12,6 +12,7 @@ url = "1.1"
 bitflags = "0.7"
 slog = { version = "1.3", features = ["max_level_trace"] }
 lazy_static = "0.2"
+byteorder = "1.0"
 
 [build-dependencies]
 gcc = "0.3"
