--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -13,6 +13,7 @@ bitflags = "0.7"
 slog = { version = "1.3", features = ["max_level_trace"] }
 lazy_static = "0.2"
 byteorder = "1.0"
+num-rational = { version = "0.1", default-features = false, features = [] }
 
 [build-dependencies]
 gcc = "0.3"
