--- a/gst-plugin-http/Cargo.toml
+++ b/gst-plugin-http/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-http"
 version = "0.1.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://github.com/sdroege/rsplugin"
-license = "LGPL-2.1+"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 url = "1.1"
