--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 build = "build.rs"
 repository = "https://github.com/sdroege/rsplugin/gst-plugin"
-license = "LGPL-2.1+"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 libc = "0.2"
