--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -14,6 +14,10 @@ slog = { version = "1.3", features = ["max_level_trace"] }
 lazy_static = "0.2"
 byteorder = "1.0"
 num-rational = { version = "0.1", default-features = false, features = [] }
+glib-sys = "0.3"
+gobject-sys = "0.3"
+gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
+derivative = "1.0"
 
 [build-dependencies]
 gcc = "0.3"
