--- a/gst-plugin-flv/Cargo.toml
+++ b/gst-plugin-flv/Cargo.toml
@@ -10,7 +10,7 @@ url = "1.1"
 gst-plugin = { path="../gst-plugin" }
 slog = "1.3"
 nom = "2.0"
-flavors = {git = "https://github.com/sdroege/flavors.git"}
+flavors = {git = "https://github.com/Geal/flavors.git"}
 
 [lib]
 name = "gstrsflv"
