--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -14,10 +14,10 @@ slog = { version = "2.0", features = ["max_level_trace"] }
 lazy_static = "0.2"
 byteorder = "1.0"
 num-rational = { version = "0.1", default-features = false, features = [] }
-glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
-gobject-sys = { git = "https://github.com/gtk-rs/sys.git" }
-gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys.git", features = ["v1_10"] }
-gstreamer-base-sys = { git = "https://github.com/sdroege/gstreamer-sys.git", features = ["v1_10"] }
+glib-sys = "0.3.4"
+gobject-sys = "0.3.4"
+gstreamer-sys = { version = "0.1.1", features = ["v1_10"] }
+gstreamer-base-sys = { version = "0.1.1", features = ["v1_10"] }
 derivative = "1.0"
 
 [build-dependencies]
