--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -14,11 +14,13 @@ slog = { version = "2.0", features = ["max_level_trace"] }
 lazy_static = "0.2"
 byteorder = "1.0"
 num-rational = { version = "0.1", default-features = false, features = [] }
-glib-sys = "0.3.4"
-gobject-sys = "0.3.4"
-gstreamer-sys = { version = "0.1.1", features = ["v1_10"] }
-gstreamer-base-sys = { version = "0.1.1", features = ["v1_10"] }
 derivative = "1.0"
+glib-sys = { version = "0.3.4", git = "https://github.com/gtk-rs/sys" }
+gobject-sys = { version = "0.3.4", git = "https://github.com/gtk-rs/sys" }
+gstreamer-sys = { version = "0.1.1", git = "https://github.com/sdroege/gstreamer-sys", features = ["v1_10"] }
+gstreamer-base-sys = { version = "0.1.1", git = "https://github.com/sdroege/gstreamer-sys", features = ["v1_10"] }
+glib = { version = "0.1.3", git = "https://github.com/gtk-rs/glib" }
+gstreamer = { version = "0.1.0", git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
 
 [build-dependencies]
 gcc = "0.3"
