--- a/gst-plugin-file/Cargo.toml
+++ b/gst-plugin-file/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT/Apache-2.0"
 [dependencies]
 url = "1.1"
 gst-plugin = { path="../gst-plugin" }
-slog = "2.0"
+gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
 
 [lib]
 name = "gstrsfile"
