--- a/gst-plugin-http/Cargo.toml
+++ b/gst-plugin-http/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT/Apache-2.0"
 url = "1.1"
 gst-plugin = { path="../gst-plugin" }
 reqwest = "0.7"
-slog = "2.0"
+gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
 
 [lib]
 name = "gstrshttp"
