--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -9,18 +9,15 @@ license = "MIT/Apache-2.0"
 [dependencies]
 libc = "0.2"
 url = "1.1"
-bitflags = "0.9"
-slog = { version = "2.0", features = ["max_level_trace"] }
 lazy_static = "0.2"
 byteorder = "1.0"
-num-rational = { version = "0.1", default-features = false, features = [] }
-derivative = "1.0"
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys", features = ["v1_10"] }
 gstreamer-base-sys = { git = "https://github.com/sdroege/gstreamer-sys", features = ["v1_10"] }
 glib = { git = "https://github.com/gtk-rs/glib" }
 gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
+gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
 
 [build-dependencies]
 gcc = "0.3"
