Add audiofx plugin with audioecho element

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
 
-members = ["gst-plugin", "gst-plugin-file", "gst-plugin-http", "gst-plugin-flv"]
+members = [
+    "gst-plugin",
+    "gst-plugin-file",
+    "gst-plugin-http",
+    "gst-plugin-flv",
+    "gst-plugin-audiofx",
+]
 
 [profile.release]
 lto = true
