--- a/gst-plugin-file/Cargo.toml
+++ b/gst-plugin-file/Cargo.toml
@@ -2,12 +2,13 @@
 name = "gst-plugin-file"
 version = "0.1.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://github.com/sdroege/rsplugin"
+repository = "https://github.com/sdroege/gst-plugin-rs"
 license = "MIT/Apache-2.0"
 
 [dependencies]
 url = "1.1"
 gst-plugin = { path="../gst-plugin" }
+gst-plugin-simple = { path="../gst-plugin-simple" }
 gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
 
 [lib]
