--- a/gst-plugin-simple/Cargo.toml
+++ b/gst-plugin-simple/Cargo.toml
@@ -1,20 +1,17 @@
 [package]
-name = "gst-plugin-audiofx"
+name = "gst-plugin-simple"
 version = "0.1.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://github.com/sdroege/gst-plugin-rs"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-gst-plugin = { path="../gst-plugin" }
+url = "1.1"
 glib = { git = "https://github.com/gtk-rs/glib" }
+gst-plugin = { path="../gst-plugin" }
 gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
 gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
-gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
-byte-slice-cast = "0.1"
-num-traits = "0.1"
 
 [lib]
-name = "gstrsaudiofx"
-crate-type = ["cdylib"]
+name = "gst_plugin_simple"
 path = "src/lib.rs"
