--- a/gst-plugin-togglerecord/Cargo.toml
+++ b/gst-plugin-togglerecord/Cargo.toml
@@ -7,6 +7,7 @@ license = "LGPL-2.1+"
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib" }
 gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
+gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
 gst-plugin = { path = "../gst-plugin" }
 gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_6"], optional = true }
 gio = { git = "https://github.com/gtk-rs/gio", optional = true }
