--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -2,8 +2,14 @@
 name = "gst-plugin"
 version = "0.1.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
+categories = ["multimedia"]
+description = "Infrastructure for writing GStreamer plugins in Rust"
 repository = "https://github.com/sdroege/gst-plugin-rs/gst-plugin"
 license = "MIT/Apache-2.0"
+readme = "README.md"
+homepage = "https://gstreamer.freedesktop.org"
+documentation = "https://sdroege.github.io/rustdoc/gst-plugin/gst_plugin_rs"
+keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
 
 [dependencies]
 libc = "0.2"
