--- a/gst-plugin-file/Cargo.toml
+++ b/gst-plugin-file/Cargo.toml
@@ -7,9 +7,9 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 url = "1.1"
-gst-plugin = { path="../gst-plugin" }
-gst-plugin-simple = { path="../gst-plugin-simple" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
+gst-plugin = { version = "0.1", path="../gst-plugin" }
+gst-plugin-simple = { path = "../gst-plugin-simple" }
+gstreamer = { version = "0.10", features = ["v1_10"] }
 
 [lib]
 name = "gstrsfile"
