--- a/gst-plugin-flv/Cargo.toml
+++ b/gst-plugin-flv/Cargo.toml
@@ -7,12 +7,12 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 url = "1.1"
-gst-plugin = { path="../gst-plugin" }
+gst-plugin = { version = "0.1", path="../gst-plugin" }
 gst-plugin-simple = { path="../gst-plugin-simple" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
+gstreamer = { version = "0.10", features = ["v1_10"] }
 num-rational = { version = "0.1", default-features = false, features = [] }
 nom = "3.0"
-flavors = {git = "https://github.com/rust-av/flavors.git"}
+flavors = { git = "https://github.com/rust-av/flavors.git" }
 muldiv = "0.1"
 
 [lib]
