--- a/gst-plugin-togglerecord/Cargo.toml
+++ b/gst-plugin-togglerecord/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 license = "LGPL-2.1+"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
-gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
-gst-plugin = { path = "../gst-plugin" }
-gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_6"], optional = true }
-gio = { git = "https://github.com/gtk-rs/gio", optional = true }
+glib = "0.4"
+gstreamer = { version = "0.10", features = ["v1_10"] }
+gstreamer-video = { version = "0.10", features = ["v1_10"] }
+gst-plugin = { version = "0.1", path = "../gst-plugin" }
+gtk = { version = "0.3", features = ["v3_6"], optional = true }
+gio = { version = "0.3", optional = true }
 send-cell = { version = "0.1", optional = true }
 
 [dev-dependencies]
