--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -15,13 +15,13 @@ keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
 libc = "0.2"
 lazy_static = "1.0"
 byteorder = "1.0"
-glib-sys = { git = "https://github.com/gtk-rs/sys" }
-gobject-sys = { git = "https://github.com/gtk-rs/sys" }
-gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys", features = ["v1_10"] }
-gstreamer-base-sys = { git = "https://github.com/sdroege/gstreamer-sys", features = ["v1_10"] }
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"] }
-gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
+glib-sys = "0.5"
+gobject-sys = "0.5"
+gstreamer-sys = { version = "0.4", features = ["v1_10"] }
+gstreamer-base-sys = { version = "0.4", features = ["v1_10"] }
+glib = "0.4"
+gstreamer = { version = "0.10", features = ["v1_10"] }
+gstreamer-base = { version = "0.10" }
 
 [lib]
 name = "gst_plugin"
