--- a/gst-plugin-audiofx/Cargo.toml
+++ b/gst-plugin-audiofx/Cargo.toml
@@ -8,9 +8,9 @@ license = "MIT/Apache-2.0"
 [dependencies]
 gst-plugin = { version = "0.1", path="../gst-plugin" }
 glib = "0.4"
-gstreamer = { version = "0.10", features = ["v1_10"] }
-gstreamer-base = { version = "0.10", features = ["v1_10"] }
-gstreamer-audio = { version = "0.10", features = ["v1_10"] }
+gstreamer = "0.10"
+gstreamer-base = "0.10"
+gstreamer-audio = "0.10"
 byte-slice-cast = "0.1"
 num-traits = "0.1"
 
