--- a/gst-plugin-file/Cargo.toml
+++ b/gst-plugin-file/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT/Apache-2.0"
 url = "1.1"
 gst-plugin = { version = "0.1", path="../gst-plugin" }
 gst-plugin-simple = { path = "../gst-plugin-simple" }
-gstreamer = { version = "0.10", features = ["v1_10"] }
+gstreamer = "0.10"
 
 [lib]
 name = "gstrsfile"
