--- a/gst-plugin-flv/Cargo.toml
+++ b/gst-plugin-flv/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT/Apache-2.0"
 url = "1.1"
 gst-plugin = { version = "0.1", path="../gst-plugin" }
 gst-plugin-simple = { path="../gst-plugin-simple" }
-gstreamer = { version = "0.10", features = ["v1_10"] }
+gstreamer = "0.10"
 num-rational = { version = "0.1", default-features = false, features = [] }
 nom = "3.0"
 flavors = { git = "https://github.com/rust-av/flavors.git" }
