--- a/gst-plugin-http/Cargo.toml
+++ b/gst-plugin-http/Cargo.toml
@@ -10,7 +10,7 @@ url = "1.1"
 gst-plugin = { version = "0.1", path="../gst-plugin" }
 gst-plugin-simple = { path="../gst-plugin-simple" }
 reqwest = "0.8"
-gstreamer = { version = "0.10", features = ["v1_10"] }
+gstreamer = "0.10"
 
 [lib]
 name = "gstrshttp"
