--- a/gst-plugin-tutorial/Cargo.toml
+++ b/gst-plugin-tutorial/Cargo.toml
@@ -11,6 +11,9 @@ glib = { git = "https://github.com/gtk-rs/glib" }
 gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
 gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
 gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs" }
+gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs" }
+byte-slice-cast = "0.1"
+num-traits = "0.1"
 
 [lib]
 name = "gstrstutorial"
