--- a/gst-plugin-tutorial/Cargo.toml
+++ b/gst-plugin-tutorial/Cargo.toml
@@ -11,6 +11,9 @@ glib = "0.4"
 gstreamer = "0.10"
 gstreamer-base = "0.10"
 gstreamer-video = "0.10"
+gstreamer-audio = "0.10"
+byte-slice-cast = "0.1"
+num-traits = "0.1"
 
 [lib]
 name = "gstrstutorial"
