--- a/gst-plugin-audiofx/Cargo.toml
+++ b/gst-plugin-audiofx/Cargo.toml
@@ -8,9 +8,15 @@ license = "MIT/Apache-2.0"
 [dependencies]
 gst-plugin = { path="../gst-plugin" }
 glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs" }
+
+# Temporary (preview Query changes)
+#gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
+#gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
+#gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs" }
+gstreamer = { git = "https://github.com/fengalin/gstreamer-rs", branch = "query_deref" }
+gstreamer-base = { git = "https://github.com/fengalin/gstreamer-rs", branch = "query_deref" }
+gstreamer-audio = { git = "https://github.com/fengalin/gstreamer-rs", branch = "query_deref" }
+
 byte-slice-cast = "0.1"
 num-traits = "0.1"
 
