--- a/gst-plugin-togglerecord/Cargo.toml
+++ b/gst-plugin-togglerecord/Cargo.toml
@@ -6,8 +6,13 @@ license = "LGPL-2.1+"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs" }
+
+# Temporary (preview Query changes)
+#gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
+#gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs" }
+gstreamer = { git = "https://github.com/fengalin/gstreamer-rs", branch = "query_deref" }
+gstreamer-video = { git = "https://github.com/fengalin/gstreamer-rs", branch = "query_deref" }
+
 gst-plugin = { path = "../gst-plugin" }
 gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_6"], optional = true }
 gio = { git = "https://github.com/gtk-rs/gio", optional = true }
