--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -20,8 +20,12 @@ gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
 gstreamer-base-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
 glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
+
+# Temporary (preview Query changes)
+#gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
+#gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
+gstreamer = { git = "https://github.com/fengalin/gstreamer-rs", branch = "query_deref" }
+gstreamer-base = { git = "https://github.com/fengalin/gstreamer-rs", branch = "query_deref" }
 
 [lib]
 name = "gst_plugin"
