--- a/gst-plugin-tutorial/Cargo.toml
+++ b/gst-plugin-tutorial/Cargo.toml
@@ -6,12 +6,12 @@ repository = "https://github.com/sdroege/gst-plugin-rs"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-gst-plugin = { path="../gst-plugin" }
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs" }
+gst-plugin = { version = "0.2", path="../gst-plugin" }
+glib = "0.5"
+gstreamer = "0.11"
+gstreamer-base = "0.11"
+gstreamer-video = "0.11"
+gstreamer-audio = "0.11"
 byte-slice-cast = "0.1"
 num-traits = "0.2"
 
