--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 
 members = [
-    "gobject-base",
+    "gobject-subclass",
     "gst-plugin",
     "gst-plugin-simple",
     "gst-plugin-file",
