--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "gst-plugin-audiofx",
     "gst-plugin-togglerecord",
     "gst-plugin-tutorial",
+    "gtk-examples"
 ]
 
 [profile.release]
