--- a/gst-plugin-simple/Cargo.toml
+++ b/gst-plugin-simple/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT/Apache-2.0"
 [dependencies]
 url = "1.1"
 glib = { git = "https://github.com/gtk-rs/glib" }
+gobject-subclass = { path="../gobject-subclass" }
 gst-plugin = { path="../gst-plugin" }
 gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
 gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
