--- a/gst-plugin-simple/Cargo.toml
+++ b/gst-plugin-simple/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-simple"
-version = "0.1.0"
+version = "0.3.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://github.com/sdroege/gst-plugin-rs"
 license = "MIT/Apache-2.0"
@@ -8,7 +8,7 @@ license = "MIT/Apache-2.0"
 [dependencies]
 url = "1.1"
 glib = { git = "https://github.com/gtk-rs/glib" }
-gobject-subclass = { path="../gobject-subclass" }
+gobject-subclass = { git = "https://github.com/sdroege/gobject-subclass" }
 gst-plugin = { path="../gst-plugin" }
 gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
 gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
