--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin"
-version = "0.1.0"
+version = "0.3.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 categories = ["multimedia"]
 description = "Infrastructure for writing GStreamer plugins in Rust"
@@ -15,7 +15,7 @@ keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
 libc = "0.2"
 lazy_static = "1.0"
 byteorder = "1.0"
-gobject-subclass = { path="../gobject-subclass" }
+gobject-subclass = { git = "https://github.com/sdroege/gobject-subclass" }
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
