--- a/gst-plugin/Cargo.toml
+++ b/gst-plugin/Cargo.toml
@@ -15,14 +15,14 @@ keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
 libc = "0.2"
 lazy_static = "1.0"
 byteorder = "1.0"
-gobject-subclass = { git = "https://github.com/gtk-rs/gobject-subclass" }
-glib-sys = { git = "https://github.com/gtk-rs/sys" }
-gobject-sys = { git = "https://github.com/gtk-rs/sys" }
-gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
-gstreamer-base-sys = { git = "https://github.com/sdroege/gstreamer-sys" }
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
+gobject-subclass = "0.2"
+glib-sys = "0.7"
+gobject-sys = "0.7"
+gstreamer-sys = "0.6"
+gstreamer-base-sys = "0.6"
+glib = "0.6"
+gstreamer = "0.12"
+gstreamer-base = "0.12"
 
 [lib]
 name = "gst_plugin"
