--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ addons:
       - liborc-0.4-dev
       - libglib2.0-dev
       - libxml2-dev
+      - libegl1-mesa
+      - libgles2-mesa
+      - libgl1-mesa-dri
+      - libgl1-mesa-glx
+      - libwayland-egl1-mesa
 
 matrix:
   allow_failures:
@@ -25,7 +30,7 @@ script:
     - cargo test --all
 
 before_install:
-- curl -L https://people.freedesktop.org/~slomo/gstreamer.tar.gz | tar xz
+- curl -L https://people.freedesktop.org/~slomo/gstreamer-1.14.3.tar.gz | tar xz
 - sed -i "s;prefix=/root/gstreamer;prefix=$PWD/gstreamer;g" $PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig/*.pc
 - export PKG_CONFIG_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig
 - export GST_PLUGIN_SYSTEM_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/gstreamer-1.0
