--- a/gst-plugin-audiofx/Cargo.toml
+++ b/gst-plugin-audiofx/Cargo.toml
@@ -2,16 +2,16 @@
 name = "gst-plugin-audiofx"
 version = "0.4.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://github.com/sdroege/gst-plugin-rs"
+repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
 license = "MIT/Apache-2.0"
 
 [dependencies]
 gobject-subclass = { git = "https://github.com/gtk-rs/gobject-subclass" }
 gst-plugin = { path="../gst-plugin" }
 glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs" }
+gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 byte-slice-cast = "0.2"
 num-traits = "0.2"
 
