--- a/gst-plugin-http/Cargo.toml
+++ b/gst-plugin-http/Cargo.toml
@@ -2,7 +2,7 @@
 name = "gst-plugin-http"
 version = "0.4.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://github.com/sdroege/gst-plugin-rs"
+repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
 license = "MIT/Apache-2.0"
 
 [dependencies]
@@ -10,7 +10,7 @@ url = "1.1"
 gst-plugin = { path="../gst-plugin" }
 gst-plugin-simple = { path="../gst-plugin-simple" }
 reqwest = "0.8"
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
+gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
 [lib]
 name = "gstrshttp"
