--- a/gst-plugin-simple/Cargo.toml
+++ b/gst-plugin-simple/Cargo.toml
@@ -2,7 +2,7 @@
 name = "gst-plugin-simple"
 version = "0.4.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://github.com/sdroege/gst-plugin-rs"
+repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
 license = "MIT/Apache-2.0"
 
 [dependencies]
@@ -10,8 +10,8 @@ url = "1.1"
 glib = { git = "https://github.com/gtk-rs/glib" }
 gobject-subclass = { git = "https://github.com/gtk-rs/gobject-subclass" }
 gst-plugin = { path="../gst-plugin" }
-gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
-gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
+gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
 [lib]
 name = "gst_plugin_simple"
