register plugin static in integration test
After a `cargo clean` the shared library is not yet present if the test is started with `cargo test`.

--- a/gst-plugin-togglerecord/Cargo.toml
+++ b/gst-plugin-togglerecord/Cargo.toml
@@ -19,7 +19,7 @@ either = "1.0"
 
 [lib]
 name = "gsttogglerecord"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [[example]]
