--- a/gst-plugin-http/Cargo.toml
+++ b/gst-plugin-http/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 url = "1.1"
+glib = { git = "https://github.com/gtk-rs/glib" }
 gst-plugin = { path="../gst-plugin" }
 gst-plugin-simple = { path="../gst-plugin-simple" }
 reqwest = "0.8"
