--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,9 +69,9 @@ test nightly:
   <<: *cargo_test
 
 rustfmt:
-  image: "rustlang/rust:nightly-slim"
+  image: "rust:slim"
   stage: "lint"
   script:
-    - rustup component add rustfmt-preview
+    - rustup component add rustfmt
     - cargo fmt --version
     - cargo fmt -- --color=always --check
