--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "gst-plugin-togglerecord",
     "gst-plugin-threadshare",
     "gst-plugin-tutorial",
+    "gst-plugin-closedcaption",
 ]
 
 [profile.release]
