--- a/gst-plugin-file/Cargo.toml
+++ b/gst-plugin-file/Cargo.toml
@@ -7,9 +7,9 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 url = "1.1"
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
+glib = { version = "0.7", features = ["subclassing"] }
+gstreamer = { version = "0.13", features = ["subclassing"] }
+gstreamer-base = { version = "0.13", features = ["subclassing"] }
 
 [lib]
 name = "gstrsfile"
