--- a/gst-plugin-threadshare/Cargo.toml
+++ b/gst-plugin-threadshare/Cargo.toml
@@ -6,15 +6,15 @@ license = "LGPL-2.1+"
 
 [dependencies]
 libc = "0.2"
-glib-sys = { git = "https://github.com/gtk-rs/sys" }
-gobject-sys = { git = "https://github.com/gtk-rs/sys" }
-gio-sys = { git = "https://github.com/gtk-rs/sys" }
-gstreamer-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys" }
-glib = { git = "https://github.com/gtk-rs/glib", features = ["subclassing"] }
-gio = { git = "https://github.com/gtk-rs/gio" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib-sys = { version = "0.8" }
+gobject-sys = { version = "0.8" }
+gio-sys = { version = "0.8" }
+gstreamer-sys = { version = "0.7" }
+glib = { version = "0.7", features = ["subclassing"] }
+gio = { version = "0.6" }
+gstreamer = { version = "0.13", features = ["subclassing"] }
+gstreamer-app = { version = "0.13" }
+gstreamer-check = { version = "0.13" }
 tokio = "0.1"
 tokio-reactor = "0.1"
 tokio-executor = "0.1"
