cdg: add cdgdec element
CDG video decoder used to render karaoke videos.

Acting as a parser for now as we don't have cdgparse yet. I'll probably
implement it at some point once we have GstBaseParse bindings.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "gst-plugin-tutorial",
     "gst-plugin-closedcaption",
     "gst-plugin-sodium",
+    "gst-plugin-cdg",
 ]
 
 [profile.release]
