Add a plugin to read data from Amazon S3
Moving from https://github.com/ford-prefect/gst-plugin-s3/ to have these
plugins in a central location.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "gst-plugin-sodium",
     "gst-plugin-cdg",
     "gst-plugin-rav1e",
+    "gst-plugin-s3",
 ]
 
 [profile.release]
