rav1e: Add AV1 encoder around rav1e crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "gst-plugin-closedcaption",
     "gst-plugin-sodium",
     "gst-plugin-cdg",
+    "gst-plugin-rav1e",
 ]
 
 [profile.release]
