Add build.rs that provides a version number, release date and other details

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "gst-plugin-threadshare",
     "gst-plugin-tutorial",
     "gst-plugin-closedcaption",
+    "gst-plugin-version-helper",
     "gst-plugin-sodium",
     "gst-plugin-cdg",
     "gst-plugin-rav1e",
