--- a/gst-plugin-audiofx/Cargo.toml
+++ b/gst-plugin-audiofx/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.5.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
+description = "Rust AudioFx Plugin"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib" }
@@ -17,3 +18,6 @@ num-traits = "0.2"
 name = "gstrsaudiofx"
 crate-type = ["cdylib"]
 path = "src/lib.rs"
+
+[build-dependencies]
+gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
