--- a/gst-plugin-rav1e/Cargo.toml
+++ b/gst-plugin-rav1e/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.5.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
 license = "MIT/Apache-2.0"
+description = "rav1e AV1 Encoder Plugin"
 edition = "2018"
 
 [dependencies]
@@ -17,3 +18,6 @@ rav1e = { git = "https://github.com/xiph/rav1e.git", default-features=false }
 name = "gstrav1e"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
+
+[build-dependencies]
+gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
