--- a/gst-plugin-tutorial/Cargo.toml
+++ b/gst-plugin-tutorial/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
 edition = "2018"
+description = "Rust Tutorial Plugin"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib", features = ["subclassing"] }
@@ -19,3 +20,6 @@ num-traits = "0.2"
 name = "gstrstutorial"
 crate-type = ["cdylib"]
 path = "src/lib.rs"
+
+[build-dependencies]
+gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
